--- a/Makefile.am
+++ b/Makefile.am
@@ -61,7 +61,8 @@ pkginclude_HEADERS = ell/ell.h \
 			ell/acd.h \
 			ell/tester.h \
 			ell/cleanup.h \
-			ell/netconfig.h
+			ell/netconfig.h \
+			ell/sysctl.h
 
 lib_LTLIBRARIES = ell/libell.la
 
@@ -149,7 +150,8 @@ ell_libell_la_SOURCES = $(linux_headers) \
 			ell/icmp6-private.h \
 			ell/acd.c \
 			ell/tester.c \
-			ell/netconfig.c
+			ell/netconfig.c \
+			ell/sysctl.c
 
 ell_libell_la_LDFLAGS = -Wl,--no-undefined \
 			-Wl,--version-script=$(top_srcdir)/ell/ell.sym \
