--- a/Makefile.am
+++ b/Makefile.am
@@ -201,7 +201,8 @@ unit_tests = unit/test-unit \
 			unit/test-ecdh \
 			unit/test-time \
 			unit/test-path \
-			unit/test-net
+			unit/test-net \
+			unit/test-sysctl
 
 dbus_tests = unit/test-hwdb \
 			unit/test-dbus \
@@ -349,6 +350,8 @@ unit_test_time_LDADD = ell/libell-private.la
 unit_test_path_LDADD = ell/libell-private.la
 
 unit_test_net_LDADD = ell/libell-private.la
+
+unit_test_sysctl_LDADD = ell/libell-private.la
 
 unit_test_data_files = unit/settings.test unit/dbus.conf
 
