minheap: Add initial implementation

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,7 +62,8 @@ pkginclude_HEADERS = ell/ell.h \
 			ell/tester.h \
 			ell/cleanup.h \
 			ell/netconfig.h \
-			ell/sysctl.h
+			ell/sysctl.h \
+			ell/minheap.h
 
 lib_LTLIBRARIES = ell/libell.la
 
@@ -151,7 +152,8 @@ ell_libell_la_SOURCES = $(linux_headers) \
 			ell/acd.c \
 			ell/tester.c \
 			ell/netconfig.c \
-			ell/sysctl.c
+			ell/sysctl.c \
+			ell/minheap.c
 
 ell_libell_la_LDFLAGS = -Wl,--no-undefined \
 			-Wl,--version-script=$(top_srcdir)/ell/ell.sym \
