notifylist: add notifylist class
oFono and iwd projects use a 'watch' pattern to register clients for
notifications about object events, such as state changes.  This pattern
is quite common and both iwd and oFono implement utilities for
adding, removing and notifying 'watch' clients.  This can be thought of
as a primitive signal / slot framework.

Implementing 'watches' properly, including handling possible call stack
re-entrancy conditions can be tricky.  The notifylist class implements a
generic 'watch' framework and aims to be the shared implementation
for iwd, oFono and other projects.

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,7 +63,8 @@ pkginclude_HEADERS = ell/ell.h \
 			ell/cleanup.h \
 			ell/netconfig.h \
 			ell/sysctl.h \
-			ell/minheap.h
+			ell/minheap.h \
+			ell/notifylist.h
 
 lib_LTLIBRARIES = ell/libell.la
 
@@ -153,7 +154,8 @@ ell_libell_la_SOURCES = $(linux_headers) \
 			ell/tester.c \
 			ell/netconfig.c \
 			ell/sysctl.c \
-			ell/minheap.c
+			ell/minheap.c \
+			ell/notifylist.c
 
 ell_libell_la_LDFLAGS = -Wl,--no-undefined \
 			-Wl,--version-script=$(top_srcdir)/ell/ell.sym \
