--- a/unit/dbus.conf
+++ b/unit/dbus.conf
@@ -7,7 +7,7 @@
   <allow_anonymous />
 
   <listen>unix:path=/tmp/ell-test-bus</listen>
-  <listen>tcp:host=localhost,bind=*,port=14046,family=ipv4</listen>
+  <listen>tcp:port=14046</listen>
   <apparmor mode="disabled" />
 
   <policy context="default">
